# jolt-atlas

./: .gitignore  Cargo.toml  README.md
atlas-onnx-tracer/: Cargo.toml
atlas-onnx-tracer/examples/: article_classification.rs  bge.rs  bge_generate.rs  gpt2.rs  gpt2_generate.rs  gpt2_text.rs  gpt2_text_tract.rs  inspect_ops.rs  layernorm_head.rs  microgpt.rs  minigpt.rs  multihead_attention.rs  nanoGPT.rs  nanoGPT_1M.rs  nanoGPT_1M_deep.rs  pad_accuracy_compare.rs  perceptron.rs  print_gpt2.rs  quant_error_analysis.rs  quant_error_analysis_qwen.rs  qwen_generate.rs  qwen_ppl.rs  self_attention_layer.rs  transformer.rs
atlas-onnx-tracer/models/concat_transformer_block/: gen.py  input.json  network.onnx
atlas-onnx-tracer/models/cos/: gen.py  network.onnx
atlas-onnx-tracer/models/erf/: gen.py  network.onnx
atlas-onnx-tracer/models/gather/: gen.py  network.onnx
atlas-onnx-tracer/models/microgpt/: input.json
atlas-onnx-tracer/models/minigpt/: network.onnx  network.onnx.data
atlas-onnx-tracer/models/nanoGPT_1M/: input.json  network.onnx
atlas-onnx-tracer/models/nanoGPT_1M_deep/: gen.py
atlas-onnx-tracer/models/positional_encoding/: gen.py  network.onnx
atlas-onnx-tracer/models/pow_cube/: gen.py  input.json  network.onnx
atlas-onnx-tracer/models/sigmoid_encoder/: gen.py  input.json  network.onnx
atlas-onnx-tracer/models/sin/: gen.py  network.onnx
atlas-onnx-tracer/models/slice/: gen.py  input.json  network.onnx
atlas-onnx-tracer/models/sum_3d_axis2/: gen.py
atlas-onnx-tracer/models/sum_axes_test/: gen.py  network.onnx  verify.py
atlas-onnx-tracer/models/sum_independent/: gen.py  network.onnx
atlas-onnx-tracer/models/tanh/: gen.py  network.onnx
atlas-onnx-tracer/src/: lib.rs
atlas-onnx-tracer/src/model/: execute.rs  load.rs  mod.rs  shadow_trace.rs  test.rs  trace.rs
atlas-onnx-tracer/src/node/: mod.rs
atlas-onnx-tracer/src/ops/: add.rs  and.rs  and2.rs  broadcast.rs  clamp.rs  concat.rs  constant.rs  cos.rs  cube.rs  div.rs  einsum.rs  erf.rs  gather.rs  identity.rs  iff.rs  input.rs  is_nan.rs  lt.rs  mean_of_squares.rs  mod.rs  mul.rs  multi_broadcast.rs  neg.rs  relu.rs  reshape.rs  rsqrt.rs  scalar_const_div.rs  scalar_const_div_pow2.rs  shr.rs  sigmoid.rs  sin.rs  slice.rs  softmax.rs  square.rs  sub.rs  sum.rs  tanh.rs
atlas-onnx-tracer/src/tensor/: mod.rs  ops.rs
atlas-onnx-tracer/src/utils/: dims.rs  f32.rs  handler_builder.rs  metrics.rs  mod.rs  parallel_utils.rs  parser.rs  precision.rs  pretty_print.rs  qea.rs  quantize.rs
committed-sumcheck/: Cargo.toml
committed-sumcheck/src/: committed_round.rs  gkr.rs  gkr_layer.rs  gkr_util.rs  lib.rs  multiplication.rs  pedersen.rs  protocol_mock.rs  round.rs  schnorr.rs  sumcheck.rs
committed-sumcheck/src/ops/: hadamard.rs
jolt-atlas-core/: Cargo.toml
jolt-atlas-core/examples/: addsubmul.rs  bge.rs  gpt2.rs  gpt2_zk_bench.rs  microgpt.rs  minigpt.rs  nanoGPT.rs  qwen.rs  transformer.rs
jolt-atlas-core/src/: lib.rs  opening_reduction.rs
jolt-atlas-core/src/onnx_proof/: e2e_tests.rs  fused_rebase.rs  malicious_prover.rs  mod.rs  preprocessing.rs  proof_serialization.rs  prover.rs  soundness_tests.rs  types.rs  verifier.rs  witness.rs  zk.rs
jolt-atlas-core/src/utils/: dims.rs  einsum.rs  logging.rs  mod.rs  opening_access.rs  opening_id_builder.rs
joltworks/: Cargo.toml
joltworks/src/: config.rs  curve.rs  lib.rs  witness.rs
joltworks/src/field/: ark.rs  mod.rs  tracked_ark.rs
joltworks/src/lookup_tables/: and.rs  clamp.rs  mod.rs  neg_relu.rs  or.rs  relu.rs  relu_2.rs  sat_clamp.rs  test.rs  unsigned_abs.rs  unsigned_less_than.rs  xor.rs
joltworks/src/msm/: mod.rs
joltworks/src/poly/: compact_polynomial.rs  dense_mlpoly.rs  eq_plus_one_poly.rs  eq_poly.rs  identity_poly.rs  mod.rs  multilinear_polynomial.rs  multiquadratic_poly.rs  one_hot_polynomial.rs  opening_proof.rs  prefix_suffix.rs  ra_poly.rs  rlc_polynomial.rs  signed_identity_poly.rs  split_eq_poly.rs  teleport_id_poly.rs  unipoly.rs
joltworks/src/subprotocols/: booleanity.rs  evaluation_reduction.rs  gamma_fold.rs  hamming_booleanity.rs  hamming_weight.rs  identity_range_check.rs  mles_product_sum.rs  mod.rs  opening_reduction.rs  ps_shout.rs  ra_virtual.rs  shout.rs  sumcheck.rs  sumcheck_prover.rs  sumcheck_verifier.rs  zk_sumcheck.rs
joltworks/src/transcripts/: blake2b.rs  keccak.rs  transcript.rs
joltworks/src/utils/: counters.rs  errors.rs  expanding_table.rs  lookup_bits.rs  math.rs  mod.rs
qwen3-layer-prover/: Cargo.toml  README.md
qwen3-layer-prover/benches/: layer_parallel_1_to_11.csv  layer_parallel_1_to_11.md
qwen3-layer-prover/scripts/: compare_layer_timings.py
qwen3-layer-prover/src/: claim.rs  decoder.rs  error.rs  layer.rs  lib.rs  pcs.rs  proof.rs  streaming_srs.rs  timing.rs  trace.rs
qwen3-layer-prover/src/layer/: claims.rs  commitments.rs  iop.rs  mod.rs  openings.rs  polys.rs  prover.rs  tensors.rs  tests.rs  types.rs  verifier.rs  witness.rs
qwen3-layer-prover/src/ops/: attention_common.rs  floor.rs  hadamard_mul.rs  hadamard_round.rs  matadd.rs  matmul.rs  matmul_round.rs  mod.rs  mul.rs  poly_bridge.rs  pv_matmul.rs  qk_score.rs  rms_norm.rs  rope.rs  round.rs  silu.rs  silu_round.rs  softmax.rs
qwen3-prover/: Cargo.toml
qwen3-prover/benches/: parallel_layers.rs
qwen3-prover/src/: commitment.rs  layer.rs  layer_input.rs  lib.rs  opening.rs  profile.rs  round.rs  round_message.rs  shape.rs
qwen3-prover/src/ops/: add.rs  matmul.rs  mod.rs  mul.rs  pv_matmul.rs  qk_score.rs  rms_norm.rs  rope.rs  silu.rs  softmax.rs
qwen3-prover/tests/: add.rs  layer.rs  matmul.rs  pv_matmul.rs  qk_score.rs  rms_norm.rs  rope.rs  silu.rs  softmax.rs  sumcheck.rs  trace.rs
qwen3-tracer/: Cargo.toml
qwen3-tracer/src/: lib.rs
qwen3-verifier/: Cargo.toml
qwen3-verifier/src/: commitment.rs  layer.rs  lib.rs  opening.rs  utils.rs
qwen3-verifier/src/ops/: add.rs  matmul.rs  mod.rs  mul.rs  pv_matmul.rs  qk_score.rs  rms_norm.rs  rope.rs  (+2 more)
zk-sumcheck/: Cargo.toml  README.md  committed_sumcheck_design.md
zk-sumcheck/src/: lib.rs  pedersen.rs  protocol.rs  round_poly.rs
(+545 files in other folders)
