[package]
name = "jolt-atlas"
version = "0.1.0"
authors = [
    "Wyatt Benno <wyatt@icme.io>",
    "Khalil Gibran Hassam <khalilhassam4@gmail.com>",
    "Alberto Centelles Hidalgo <zk_albi@proton.me>",
    "Antoine Douchet <antoinedcht@hotmail.com>",
]
edition = "2021"
description = "Fast and fully open source from a16z crypto modified by NovaNet for zkML precompiles."
documentation = "https://github.com/ICME-Lab/jolt-atlas/README.md"
repository = "https://github.com/ICME-Lab/jolt-atlas"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs", "zkML"]

[workspace]
members = ["jolt-atlas-core", "atlas-onnx-tracer", "common", "joltworks"]
exclude = ["onnx-tracer", "zkml-jolt-core"]

[lib]
path = "./src/lib.rs"


[dependencies]
jolt-atlas-core = { path = "./jolt-atlas-core" }

[workspace.dependencies]
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }

[profile.test]
opt-level = 2
lto = "off"
codegen-units = 256

[profile.release]
debug = 1
lto = "fat"

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"
overflow-checks = true

[profile.guest]
inherits = "release"
debug = false

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
