[package]
name = "atlas-onnx-tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

# Parallel Processing
rayon.workspace = true

# Randomness
rand = { workspace = true, default-features = true }

# Tracing and Profiling
tracing = { workspace = true, default-features = true }
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

# Core Utilities
regex.workspace = true
thiserror.workspace = true

# Local-only
once_cell = "1.19"
tabled = "0.20"
tract-onnx = { git = "https://github.com/sonos/tract/", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
maybe-rayon = { version = "0.1.1" }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
colored = { version = "2.0.0", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
chrono = "0.4.31"
maybe-rayon = { version = "0.1.1", features = ["threads"] }
