[package]
name = "committed-sumcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-std = { workspace = true }
joltworks = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
rand_chacha = { version = "0.3.0", default-features = false }
