[package]
name = "jolt-atlas-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
atlas-onnx-tracer.workspace = true
common.workspace = true
joltworks.workspace = true

# Cryptography and Math
ark-bn254.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

# Numeric
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Parallel Processing
rayon.workspace = true

# Randomness
rand.workspace = true
rand_core.workspace = true

# Tracing and Profiling
tracing.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

# Core Utilities
derive_more.workspace = true
itertools.workspace = true
regex.workspace = true
strum.workspace = true
strum_macros.workspace = true

# Testing
serial_test.workspace = true

[dev-dependencies]
# Enable test-feature for joltworks during tests only
joltworks = { workspace = true, features = ["test-feature"] }
