[package]
name = "joltworks"
version = "0.1.0"
edition = "2021"

[features]
monitor = ["dep:sysinfo"]
allocative = ["dep:inferno"]
challenge-254-bit = []
test-feature = []

[dependencies]
# Internal
common.workspace = true
atlas-onnx-tracer.workspace = true

# Serialization
serde.workspace = true

# Cryptography and Math
ark-bn254.workspace = true
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize.workspace = true
ark-std.workspace = true
sha3 = "0.10.8"
blake2 = "0.10"
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
dory = { package = "dory-pcs", version = "0.1.0", features = [
    "backends",
    "cache",
    "disk-persistence",
] }

# Numeric
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true

# Parallel Processing
rayon.workspace = true

# Randomness
rand.workspace = true
rand_chacha = { version = "0.3.0", default-features = false }
rand_core.workspace = true
rand_distr = "0.4.3"

# Tracing and Profiling
tracing.workspace = true
inferno = { version = "0.12.3", optional = true }
allocative.workspace = true

# Core Utilities
thiserror = { workspace = true, default-features = true }
strum.workspace = true
strum_macros.workspace = true
fixedbitset = "0.5.0"
derive_more.workspace = true
itertools.workspace = true

# System and Platform
sysinfo = { version = "0.30.8", optional = true }
memory-stats = { version = "1.0.0", features = ["always_use_statm"] }

# Testing
serial_test.workspace = true
