[package]
name = "qwen3-layer-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { workspace = true }
common = { workspace = true }
joltworks = { workspace = true }
rayon = { workspace = true }
serde_json = "1"
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
