[package]
name = "qwen3-layer-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
common = { workspace = true }
jolt-atlas-core = { path = "../jolt-atlas-core" }
joltworks = { workspace = true }
rand_chacha = { version = "0.3.0", default-features = false }
rayon = { workspace = true }
serde_json = "1"
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
