[package]
name = "qwen3-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
itertools = { workspace = true }
joltworks = { workspace = true }
qwen3-common = { workspace = true }
