[package]
name = "zk-sumcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
